--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- SIGNUP.HTML --><!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Sign Up</title>
@@ -15,7 +14,6 @@
       height: 100vh;
       margin: 0;
     }
-
     .signup-box {
       background: #111;
       border: 1px solid gold;
@@ -25,13 +23,11 @@
       width: 90%;
       max-width: 400px;
     }
-
     h2 {
       text-align: center;
       margin-bottom: 1.5rem;
       color: gold;
     }
-
     input {
       width: 100%;
       padding: 12px;
@@ -42,7 +38,6 @@
       color: #fff;
       font-size: 1rem;
     }
-
     button {
       width: 100%;
       padding: 12px;
@@ -55,17 +50,14 @@
       cursor: pointer;
       margin-top: 10px;
     }
-
     .links {
       text-align: center;
       margin-top: 15px;
     }
-
     .links a {
       color: gold;
       text-decoration: none;
     }
-
     .popup {
       position: fixed;
       top: 10px;
@@ -77,27 +69,27 @@
       box-shadow: 0 0 10px gold;
       display: none;
     }
+    .rule { font-size: 0.85rem; color: #aaa; margin-top: -5px; }
   </style>
 </head>
 <body>
   <div class="signup-box">
     <h2>Sign Up</h2>
-    <input type="text" id="fullName" placeholder="Full Name (Optional)" />
-    <input type="email" id="email" placeholder="Email" />
-    <input type="password" id="password" placeholder="Password" />
+    <input type="text" id="fullName" placeholder="Full Name (e.g. OGUNIYI DAMILOLA)" required />
+    <input type="text" id="matricNumber" placeholder="Matric Number (9 digits)" required />
+    <input type="email" id="email" placeholder="Email" required />
+    <input type="password" id="password" placeholder="Password" required maxlength="12" />
+    <div class="rule">Minimum 6 characters</div>
     <button onclick="signup()">Create Account</button>
     <div class="links">
       <a href="login.html">Already have an account? Sign in</a>
     </div>
   </div>
-
   <div id="popup" class="popup"></div>
-
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getAuth, createUserWithEmailAndPassword, sendEmailVerification } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
     import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
-
     const firebaseConfig = {
       apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
       authDomain: "finsa-connect.firebaseapp.com",
@@ -106,41 +98,35 @@
       messagingSenderId: "126845965255",
       appId: "1:126845965255:web:c82539297a8464873d7fe2"
     };
-
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
-
     const popup = document.getElementById('popup');
-
     function showPopup(message) {
       popup.textContent = message;
       popup.style.display = 'block';
       setTimeout(() => popup.style.display = 'none', 4000);
     }
-
     window.signup = function () {
       const fullName = document.getElementById('fullName').value.trim();
+      const matricNumber = document.getElementById('matricNumber').value.trim();
       const email = document.getElementById('email').value.trim();
       const password = document.getElementById('password').value;
-
-      if (!email || !password) {
-        showPopup("Email and password are required.");
-        return;
-      }
-
+      if (!fullName.split(" ").filter(Boolean).length >= 2) return showPopup("Enter at least 2 names.");
+      if (!/^[0-9]{9}$/.test(matricNumber)) return showPopup("Matric Number must be 9 digits.");
+      if (password.length < 6) return showPopup("Password must be at least 6 characters.");
       createUserWithEmailAndPassword(auth, email, password)
         .then(async (userCredential) => {
           const user = userCredential.user;
           await setDoc(doc(db, "Users", user.uid), {
-            fullName: fullName || "",
-            email: email,
+            fullName,
+            matricNumber,
+            email,
             role: "user"
           });
-          showPopup("Signup successful!");
-          setTimeout(() => {
-            window.location.href = "home.html";
-          }, 1500);
+          await sendEmailVerification(user);
+          showPopup("Account created. Please verify your email.");
+          setTimeout(() => window.location.href = "login.html", 3000);
         })
         .catch((error) => {
           showPopup("Signup error: " + error.message);
@@ -148,4 +134,4 @@
     };
   </script>
 </body>
-</html>
+</html><!-- LOGIN.HTML --><!-- Will be sent next after you review this one. -->
