--- a/login.html
+++ b/login.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- LOGIN.HTML --><!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Login</title>
+  <title>Sign In</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
@@ -15,7 +14,6 @@
       height: 100vh;
       margin: 0;
     }
-
     .login-box {
       background: #111;
       border: 1px solid gold;
@@ -25,13 +23,11 @@
       width: 90%;
       max-width: 400px;
     }
-
     h2 {
       text-align: center;
       margin-bottom: 1.5rem;
       color: gold;
     }
-
     input {
       width: 100%;
       padding: 12px;
@@ -42,7 +38,6 @@
       color: #fff;
       font-size: 1rem;
     }
-
     button {
       width: 100%;
       padding: 12px;
@@ -54,29 +49,24 @@
       border-radius: 6px;
       cursor: pointer;
     }
-
     .forgot {
       text-align: right;
       margin-top: -5px;
       margin-bottom: 10px;
     }
-
     .forgot a {
       font-size: 0.85rem;
       color: gold;
       text-decoration: none;
     }
-
     .links {
       text-align: center;
       margin-top: 15px;
     }
-
     .links a {
       color: gold;
       text-decoration: none;
     }
-
     .popup {
       position: fixed;
       top: 10px;
@@ -92,7 +82,7 @@
 </head>
 <body>
   <div class="login-box">
-    <h2>Login</h2>
+    <h2>Sign In</h2>
     <input type="email" id="email" placeholder="Email" />
     <input type="password" id="password" placeholder="Password" />
     <div class="forgot">
@@ -103,13 +93,10 @@
       <a href="signup.html">New here? Create account</a>
     </div>
   </div>
-
   <div id="popup" class="popup"></div>
-
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-
     const firebaseConfig = {
       apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
       authDomain: "finsa-connect.firebaseapp.com",
@@ -118,67 +105,40 @@
       messagingSenderId: "126845965255",
       appId: "1:126845965255:web:c82539297a8464873d7fe2"
     };
-
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
-
     const popup = document.getElementById('popup');
-
     function showPopup(message) {
       popup.textContent = message;
       popup.style.display = 'block';
       setTimeout(() => popup.style.display = 'none', 4000);
     }
-
     window.login = function () {
       const email = document.getElementById('email').value.trim();
       const password = document.getElementById('password').value;
-
-      if (!email || !password) {
-        showPopup("Please enter email and password.");
-        return;
-      }
-
+      if (!email || !password) return showPopup("Please enter email and password.");
       signInWithEmailAndPassword(auth, email, password)
-        .then(() => {
+        .then((userCredential) => {
+          const user = userCredential.user;
+          if (!user.emailVerified) {
+            showPopup("Please verify your email before logging in.");
+            return;
+          }
           showPopup("Login successful!");
           setTimeout(() => {
             window.location.href = "home.html";
           }, 1500);
         })
         .catch((error) => {
-          let msg = "";
-          switch (error.code) {
-            case "auth/user-not-found":
-              msg = "No user found with that email.";
-              break;
-            case "auth/wrong-password":
-              msg = "Incorrect password. Try again.";
-              break;
-            case "auth/invalid-email":
-              msg = "Enter a valid email address.";
-              break;
-            case "auth/missing-password":
-              msg = "Password field is empty.";
-              break;
-            default:
-              msg = error.message.includes("wrong-password")
-                ? "Incorrect password. Try again."
-                : "Login failed. Try again.";
-          }
+          let msg = error.message.includes("password") ? "Incorrect password." : "Login failed.";
           showPopup(msg);
         });
     };
-
     window.resetPassword = function () {
-      const email = document.getElementById('email').value.trim();
-      if (!email) {
-        showPopup("Enter your email to reset password.");
-        return;
-      }
-
+      const email = prompt("Enter your email to reset password:");
+      if (!email) return;
       sendPasswordResetEmail(auth, email)
-        .then(() => showPopup("Password reset email sent."))
+        .then(() => showPopup("Reset link sent to your email."))
         .catch((error) => showPopup("Error: " + error.message));
     };
   </script>
