--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!-- HOME.HTML (Dashboard) --><!DOCTYPE html><html lang="en">
+<!-- HOME.HTML (Home) --><!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Home</title>
