--- a/login.html
+++ b/login.html
@@ -1,32 +1,36 @@
-<!-- LOGIN.HTML --><!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Sign In</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sign In</title>
   <style>
     body {
-      background: #0a0a0a;
-      font-family: 'Segoe UI', sans-serif;
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #000;
+      background-image: url('https://cdn.jsdelivr.net/gh/Julian-Nash/assets@main/tech-background.gif');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-    .login-box {
-      background: #111;
-      border: 1px solid gold;
+    .login-container {
+      background-color: rgba(20, 20, 20, 0.88);
+      padding: 30px;
       border-radius: 12px;
-      padding: 2rem;
-      box-shadow: 0 0 30px gold;
-      width: 90%;
+      box-shadow: 0 0 15px rgba(255, 215, 0, 0.5);
       max-width: 400px;
+      width: 90%;
+      text-align: center;
     }
     h2 {
-      text-align: center;
-      margin-bottom: 1.5rem;
       color: gold;
+      margin-bottom: 20px;
     }
     input {
       width: 100%;
@@ -34,69 +38,63 @@
       margin: 10px 0;
       border: none;
       border-radius: 6px;
-      background: #222;
-      color: #fff;
       font-size: 1rem;
     }
     button {
       width: 100%;
       padding: 12px;
-      background: gold;
-      color: black;
+      background-color: gold;
+      color: #000;
       font-weight: bold;
-      font-size: 1rem;
       border: none;
       border-radius: 6px;
       cursor: pointer;
+      margin-top: 10px;
     }
-    .forgot {
-      text-align: right;
-      margin-top: -5px;
-      margin-bottom: 10px;
+    button:hover {
+      background-color: #ffd700;
     }
-    .forgot a {
-      font-size: 0.85rem;
-      color: gold;
-      text-decoration: none;
-    }
-    .links {
-      text-align: center;
+    .bottom-link {
+      color: #ccc;
       margin-top: 15px;
+      font-size: 0.9rem;
     }
-    .links a {
+    .bottom-link a {
       color: gold;
       text-decoration: none;
     }
-    .popup {
+    .toast {
       position: fixed;
-      top: 10px;
-      right: 10px;
-      background: #222;
+      top: 20px;
+      right: 20px;
+      background-color: #222;
       color: gold;
-      padding: 10px 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px gold;
+      padding: 12px 20px;
+      border-radius: 6px;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.6);
       display: none;
+      z-index: 999;
     }
   </style>
 </head>
 <body>
-  <div class="login-box">
+  <div class="login-container">
     <h2>Sign In</h2>
-    <input type="email" id="email" placeholder="Email" />
-    <input type="password" id="password" placeholder="Password" />
-    <div class="forgot">
-      <a href="#" onclick="resetPassword()">Forgot Password?</a>
+    <input type="email" id="email" placeholder="Email" required />
+    <input type="password" id="password" placeholder="Password" required />
+    <div class="bottom-link" style="text-align: right; margin-top: -5px;">
+      <a href="#" onclick="forgotPassword()">Forgot Password?</a>
     </div>
-    <button onclick="login()">Sign In</button>
-    <div class="links">
-      <a href="signup.html">New here? Create account</a>
-    </div>
+    <button onclick="loginUser()">Sign In</button>
+    <div class="bottom-link">New here? <a href="signup.html">Create account</a></div>
   </div>
-  <div id="popup" class="popup"></div>
+  <div class="toast" id="toast"></div>
+
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js';
+    import { getAuth, signInWithEmailAndPassword, sendPasswordResetEmail } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js';
+    import { getFirestore, getDoc, doc } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js';
+
     const firebaseConfig = {
       apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
       authDomain: "finsa-connect.firebaseapp.com",
@@ -105,42 +103,66 @@
       messagingSenderId: "126845965255",
       appId: "1:126845965255:web:c82539297a8464873d7fe2"
     };
+
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
-    const popup = document.getElementById('popup');
-    function showPopup(message) {
-      popup.textContent = message;
-      popup.style.display = 'block';
-      setTimeout(() => popup.style.display = 'none', 4000);
+    const db = getFirestore(app);
+
+    function showToast(message) {
+      const toast = document.getElementById("toast");
+      toast.textContent = message;
+      toast.style.display = "block";
+      setTimeout(() => toast.style.display = "none", 4000);
     }
-    window.login = function () {
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value;
-      if (!email || !password) return showPopup("Please enter email and password.");
-      signInWithEmailAndPassword(auth, email, password)
-        .then((userCredential) => {
-          const user = userCredential.user;
-          if (!user.emailVerified) {
-            showPopup("Please verify your email before logging in.");
-            return;
-          }
-          showPopup("Login successful!");
-          setTimeout(() => {
-            window.location.href = "home.html";
-          }, 1500);
-        })
-        .catch((error) => {
-          let msg = error.message.includes("password") ? "Incorrect password." : "Login failed.";
-          showPopup(msg);
-        });
-    };
-    window.resetPassword = function () {
-      const email = prompt("Enter your email to reset password:");
+
+    window.loginUser = async function () {
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value;
+
+      if (!email || !password) return showToast("Please fill in all fields");
+
+      try {
+        const userCredential = await signInWithEmailAndPassword(auth, email, password);
+        const user = userCredential.user;
+
+        if (!user.emailVerified) {
+          showToast("Please verify your email before signing in");
+          return;
+        }
+
+        // Fetch user's data from Firestore
+        const userDoc = await getDoc(doc(db, "Users", user.uid));
+        if (userDoc.exists()) {
+          const data = userDoc.data();
+          sessionStorage.setItem("userFullName", data.fullName);
+          sessionStorage.setItem("userMatric", data.matricNumber);
+        }
+
+        showToast("Sign in successful");
+        setTimeout(() => {
+          window.location.href = "home.html";
+        }, 3000);
+      } catch (error) {
+        let message = "Login failed";
+        if (error.code === "auth/wrong-password") message = "Incorrect password";
+        else if (error.code === "auth/user-not-found") message = "Email not found";
+        else if (error.code === "auth/invalid-email") message = "Invalid email format";
+        else message = error.message;
+        showToast(message);
+      }
+    }
+
+    window.forgotPassword = async function () {
+      const email = prompt("Enter your registered email to reset password:");
       if (!email) return;
-      sendPasswordResetEmail(auth, email)
-        .then(() => showPopup("Reset link sent to your email."))
-        .catch((error) => showPopup("Error: " + error.message));
-    };
+
+      try {
+        await sendPasswordResetEmail(auth, email);
+        showToast("Password reset link sent to your email");
+      } catch (error) {
+        showToast("Error: " + error.message);
+      }
+    }
   </script>
 </body>
 </html>
